<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Info"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textViewFOrG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="FamilyOrGroup Of 1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/radioButtonM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="M"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/radioButtonF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="F"
                    android:textColor="#FFFFFF" />
            </RadioGroup>

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/input"
                android:ems="10"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/editTextYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/input"
                android:ems="10"
                android:hint="@string/year"
                android:inputType="number" >
            </EditText>

            <EditText
                android:id="@+id/editTextTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/input"
                android:ems="10"
                android:hint="@string/tel"
                android:inputType="phone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp" >

                <Button
                    android:id="@+id/buttonAddMem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/addmember" />

                <Button
                    android:id="@+id/buttonFinish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/finish" />

                <Button
                    android:id="@+id/buttonBack"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/btn_back" />

                <Button
                    android:id="@+id/buttonNext"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/segn" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>